Prepare for screenshot-feature API docs ; implement more of Material 3

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ build*
 .vscode
 Testing/
 node_modules/
+
+# Generated Docs
+docs/assets/
+docs/generated/
+docs/doc_*.json
+docs/*.md
+!docs/pages/
